<package>
  <name>Ros2_for_Waveshare_Alphabot2</name>
  <version>0.1.0</version>
  <description>Waveshare Alphabot 2 Raspberry Pi powered robot.</description>
  <maintainer email="ubuntu@todo.todo">Claire Schubert</maintainer>
  <license>TODO: License declaration</license>
  

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>