<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_for_waveshare_alphabot2</name>
  <version>0.0.0</version>
  <description>Camera Subscriber for the topic /image_raw form the v4l2_camera_node </description>
  <maintainer email="ubuntu@todo.todo">Claire Schubert</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>Alphabot2_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_python</build_type>
    <ament_python:entry_points>
        your_executable = your_package.your_module:main
    </ament_python:entry_points>
    <libexec_directory>lib/${PROJECT_NAME}</libexec_directory>
  </export>
</package>
